acme-app/server/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acme-webserver-deploymentconfig
  namespace: acme
  labels:
    app: acme-webserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acme-webserver

  template:
    metadata:
      labels:
        app: acme-webserver
      annotations:
        pod.info/cluster: "Maindeck"
        pod.info/image: "quay.io/dovid/acme-app:1.37"
    spec:
      containers:

        - name: webserver
          image: "quay.io/dovid/acme-app:1.37"
          
          ports:
            - containerPort: 8080
            - containerPort: 9922
          
          securityContext:
            runAsNonRoot: true

          ## Demonstrate how to manage ENV vars in deployment
          ## https://kubernetes.io/docs/tasks/inject-data-application/environment-variable-expose-pod-information/
          ## All meta fields: https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.19/#objectfieldselector-v1-core
