acme-app/server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apache-8080
  namespace: acme
spec:
  selector:
    app: acme-webserver
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
