acme-app/server/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: acme-route
  namespace: acme
  labels:
    app.kubernetes.io/instance: acme
spec:
  to:
    kind: Service
    name: apache-8080
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
